<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ActivityCadastrarUsuario">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                style="@style/Titulo"
                android:text="@string/cadastre_se" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@mipmap/ic_launcher" />
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">
                <EditText android:hint="@string/nome" style="@style/EntradaTextoFormulario" android:id="@+id/nome" />
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">
                 <EditText android:hint="@string/sobrenome" style="@style/EntradaTextoFormulario" android:id="@+id/sobrenome"/>
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">

                <TextView
                    style="@style/LegendaFormulario"
                    android:layout_height="wrap_content"
                    android:text="@string/sexo"
                    android:labelFor="@id/sexo"/>

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/sexo">

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/feminino"
                        android:id="@+id/feminino"/>

                    <android.support.v7.widget.AppCompatRadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/masculino"
                        android:id="@+id/masculino"/>
                </RadioGroup>

            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">

                <TextView
                    style="@style/LegendaFormulario"
                    android:text="@string/estado_civil"
                    android:labelFor="@id/estadoCivil"/>

                <Spinner
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:entries="@array/estado_civil"
                    android:id="@+id/estadoCivil"/>
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">
                <EditText android:hint="@string/e_mail" style="@style/EntradaTextoFormulario" android:id="@+id/email" />
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">
                <EditText android:hint="@string/senha" style="@style/EntradaTextoFormulario"
                    android:inputType="textPassword" android:id="@+id/senha"/>
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">
                <EditText android:hint="@string/repetir_senha"
                    style="@style/EntradaTextoFormulario"
                    android:inputType="textPassword" android:id="@+id/senha_repita"/>
            </LinearLayout>

            <LinearLayout style="@style/ItemFormulario">

                <android.support.v7.widget.AppCompatButton
                    style="@style/BotaoEnviarFormulario"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/cadastrar"
                    android:onClick="cadastrar"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>