<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".view.activity.ActivityEntrar">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="16dp"
            android:paddingLeft="16dp"
            android:paddingRight="16dp"
            android:paddingTop="16dp">

            <TextView
                style="@style/Titulo"
                android:text="@string/enter_account" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:src="@drawable/buckboard_gold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout style="@style/ItemFormulario">

                    <EditText
                        android:id="@+id/email"
                        style="@style/EntradaTextoFormulario"
                        android:layout_width="match_parent"
                        android:hint="@string/e_mail"
                        android:inputType="textEmailAddress" />
                </LinearLayout>

                <LinearLayout style="@style/ItemFormulario">

                    <EditText
                        android:id="@+id/senha"
                        style="@style/EntradaTextoFormulario"
                        android:hint="@string/senha"
                        android:inputType="textPassword" />
                </LinearLayout>

                <!--LinearLayout style="@style/ItemFormulario">

                    <android.support.v7.widget.AppCompatCheckBox
                        android:id="@+id/keep_logged"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/remember_password"
                        android:checked="true"/>
                </LinearLayout-->

                <LinearLayout style="@style/ItemFormulario">

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/login_btn"
                        style="@style/BotaoEnviarFormulario"
                        android:onClick="entrar"
                        android:text="@string/login" />
                </LinearLayout>


                <LinearLayout
                    style="@style/ItemFormulario"
                    android:orientation="vertical">

                    <TextView
                        style="@style/LegendaFormulario"
                        android:text="Ainda não tem uma conta?" />

                    <android.support.v7.widget.AppCompatButton
                        android:id="@+id/crete_new_user_btn"
                        style="@style/BotaoSegundaAcaoFormulario"
                        android:onClick="openCreateNewUserView"
                        android:text="@string/create_user" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>


</LinearLayout>